# dataframe-api-compat

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  README.md  blog_post.md  bump_version.py  check_completeness.py  contributing.md  dataframe_standard.py  generate_members.py  generate_random_versions.py  index.html  make.sh  mkdocs.yml  mypy.ini  objects.inv  pandas_standard.py  polars_standard.py  polars_versions.txt  pyjanitor.py  pyjanitor_example.py  pyproject.toml  requirements-dev-modin.txt  requirements-dev.txt  setup.cfg  standard.py  t.py  test_pandas_standard.py  test_standard.py  tmp  type-check.sh
.github/workflows/: earliest_versions.yml  mkdocs.yml  random_version.yml  tox.yml
basics/column/: index.html
basics/complete_example/: index.html
basics/dataframe/: index.html
basics/persist/: index.html
basics/scalar/: index.html
dataframe_api_compat/: __init__.py  utils.py
dataframe_api_compat/modin_standard/: __init__.py  column_object.py  dataframe_object.py  group_by_object.py  scalar_object.py
dataframe_api_compat/pandas_interchange/: __init__.py  buffer.py  column.py  dataframe.py  dataframe_protocol.py  from_dataframe.py  utils.py
dataframe_api_compat/pandas_standard/: __init__.py  column_object.py  dataframe_object.py  group_by_object.py  pandas_standard.py  scalar_object.py
dataframe_api_compat/polars_standard/: __init__.py  column_object.py  dataframe_object.py  group_by_object.py  polars_standard.py  scalar_object.py
docs/: about.md  basics.md  generate_members.py  index.md  installation.md  modin-column.md  modin-dataframe.md  modin-namespace.md  modin-scalar.md  pandas-column.md  pandas-dataframe.md  pandas-namespace.md  pandas-scalar.md  polars-column.md  polars-dataframe.md  polars-namespace.md  polars-scalar.md  quick_start.md  reference.md  requirements-docs.txt  t.py  tutorial.md
docs/basics/: column.md  complete_example.md  dataframe.md  persist.md  scalar.md
installation/: index.html
modin-column/: index.html
modin-dataframe/: index.html
modin-namespace/: index.html
modin-scalar/: index.html
pandas-column/: index.html
pandas-dataframe/: index.html
pandas-namespace/: index.html
pandas-scalar/: index.html
pandas_standard/: __init__.py  pandas_standard.py
polars-column/: index.html
polars-dataframe/: index.html
polars-scalar/: index.html
polars_standard/: __init__.py  polars_standard.py
quick_start/: index.html
reference/: index.html
search/: search_index.json
tests/: conftest.py  test_standard.py  utils.py
tests/column/: and_or_test.py  any_all_test.py  cast_test.py  col_sorted_indices_test.py  col_to_array_object_test.py  column_test.py  comparisons_test.py  conftest.py  cross_df_comparisons_test.py  cumulative_test.py  divmod_test.py  fill_nan_test.py  fill_null_test.py  get_rows_by_mask_test.py  get_rows_test.py  get_value_test.py  invalid_pandas_test.py  invert_test.py  is_in_test.py  is_nan_test.py  is_null_test.py  len_test.py  n_unique_test.py  name_test.py  non_unique_column_names.py  non_unique_column_names_test.py  output_name_test.py  parent_dataframe_test.py  pow_test.py  reductions_test.py  rename_test.py  root_names_test.py  schema_test.py  shift_test.py  slice_rows_test.py  sort_test.py  sorted_indices_test.py  statistics_test.py  unique_indices_test.py
tests/dataframe/: all_rowwise_test.py  and_test.py  any_all_test.py  any_rowwise_test.py  assign_test.py  cast_test.py  collect_test.py  columns_iter_test.py  comparisons_test.py  conftest.py  cross_df_comparison_test.py  divmod_test.py  drop_column_test.py  drop_nulls_test.py  fill_nan_test.py  fill_null_test.py  get_column_by_name_test.py  get_column_names_test.py  get_columns_by_name_test.py  get_rows_by_mask_test.py  get_rows_test.py  insert_test.py  invert_test.py  is_nan_test.py  is_null_test.py  join_test.py  or_test.py  pow_test.py  (+13 more)
utils/: bump_version.py  generate_random_versions.py  make.sh  pandas_versions.txt  update-pandas.sh  upgrade-dataframe-api.sh
(+28 files in other folders)
