[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataframe_api_compat"
version = "0.1.14"
authors = [
  { name="Marco Gorelli", email="33491632+MarcoGorelli@users.noreply.github.com" },
]
description = "Implementation of the DataFrame Standard for pandas and Polars"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/data-apis/dataframe-api-compat"
"Bug Tracker" = "https://github.com/data-apis/dataframe-api-compat"

[tool.ruff]
line-length = 90
fix = true
target-version = "py38"

select = [
  "E", # pycodestyle
  "W", # pycodestyle
  "F", # Pyflakes
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
#   "D", # flake8-docstrings
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "Q", # flake8-quotes
  "UP", # pyupgrade
#   "PT", # flake8-pytest-style
  "RUF", # Ruff-specific rules
  "PTH", # flake8-use-pathlib
]
ignore = ['E501']

[tool.pytest.ini_options]
filterwarnings = [
  # Fail on warnings...
  "error",
]
xfail_strict = true

[tool.coverage.run]
plugins = ["covdefaults"]
