[metadata]
name = impl_dataframe_api
version = 0.1.0
description = Draft implementation of the DataFrame Standard for pandas and polars
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarcoGorelli/impl-dataframe-api
author = Marco Gorelli
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = pandas_standard,polars_standard
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
