[metadata]
name = dataframe_api_compat
version = 0.1.2
description = Implementation of the DataFrame Standard for pandas and polars
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/data-apis/dataframe-api-compat
author = Marco Gorelli
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
py_modules = dataframe_api_compat
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
